--- a/css/style.css
+++ b/css/style.css
@@ -103,8 +103,8 @@
 }
 
 .content h6{
-    font-size: 1.5em;
-    font-style: italic;
+    font-size: 1.3em;
+    font-style: normal;
     margin: 0 20px;
 
     line-height: 1.6;
@@ -117,8 +117,8 @@
     font-size: 1.6em;
     font-weight: bold;
 
-    width: 250px;
-    height: 60px;
+    width: 240px;
+    height: 65px;
 
     background: none;
     border: 1px solid white;
@@ -222,55 +222,129 @@
     position: var(--pos1);
     width: var(--main-width);
     height: var(--main-height);
+
+    display: grid;
+    grid-template-columns: auto auto;
+    background: rgb(255, 250, 250);
    
 }
 
-.about img{
-    position: var(--pos2);
-    top: 0;
-    width: 100%;
-    object-fit: cover;
-    height: 100%;
+.about .part1{
+    position: var(--pos1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
 }
 
-.about .content{
+.part1 img{
+    width: 70%;
+}
+
+.about .part2{
     position: var(--pos1);
-    color: rgb(0, 0, 0);
-
-    width: 50%;
-    height: 70vh;
-    margin: 5% auto;
-
     display: flex;
     flex-direction: column;
     align-items: center;
-
-    background: rgba(255, 255, 0, 0.507);
-    border: 1px solid yellow;
-
+    justify-content: space-evenly;
 }
 
-.content h3{
-    font-size: var(--font7);
-    margin-top: var(--marg5);
-    overflow-y: hidden;
+.part2 h4{
+    font-size: var(--font8);
 }
 
-.content p{
+.part2 h4::before, .part2 h4::after{
+    content: "";
+    position: var(--pos2);
+    border: 1px solid rgba(0, 0, 0, 0.61);
+    width: 15%;
+    top: 9.5%;
+}
+
+.part2 h4::before{
+    left: 15%;
+}
+
+.part2 h4::after{
+    right: 15%;
+}
+
+.part2 .par > p{
+    width: 90%;
+    line-break: loose;
+    line-height: 30px;
+    word-spacing: 1.25px;
+    text-align: center;
     font-size: var(--font5);
-    line-height: 1.60;
-    word-spacing: 5px;
-    margin: var(--marg5);
-    overflow-y: hidden;
 }
 
+.part2 .units{
+    position: var(--pos1);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    height: 40vh;
+    width: 100%;
+}
+
+.units .unit{
+    position: var(--pos1);
+    display: flex;
+    height: 100%;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    border: 1px solid;
+    margin: 0 10px;
+
+    border-radius: 5px;
+    cursor: pointer;
+    box-shadow: 1px 1px 20px rgba(0, 0, 0, 0.137);
+}
+
+.units .unit:nth-child(2){
+    background: darkblue;
+    color: white;
+}
+.units .unit:first-child, .unit:last-child{
+    background: #fff;
+    height: 35vh;
+    border: none;
+    
+}
+
+.units > .unit:hover{
+    transition: 0.3s ease-in-out;
+    box-shadow: 1px 1px 20px rgba(203, 223, 26, 0.397);
+
+}
+
+.unit img{
+    width: 80px;
+    height: 80px;
+    object-fit: cover;
+    border-radius: 50px;
+    border: 2px solid blue;
+    padding: 5px;
+}
+
+.unit > p{
+    text-align: center;
+    font-size: var(--font1);
+    word-spacing: 1.24px;
+}
+
+
+
+
+/*footer*/
 .banner .footer{
     position: var(--pos1);
     width: var(--main-width);
     height: var(--main-height);
     background: rgb(2, 2, 34);
     color: whitesmoke;
-
     display: flex;
     flex-direction: column;
 }
@@ -280,6 +354,7 @@
     display: grid;
     grid-template-columns: auto auto auto;
     margin-top: var(--marg5);
+    height: 50vh;
 
 }
 
@@ -291,6 +366,7 @@
 .cat1 p{
     cursor: pointer;
     overflow-y: hidden;
+    margin-top: 20px;
 
 }
 
@@ -299,14 +375,18 @@
     width: 30%;
     height: 40px;
     margin: 0 auto;
+    margin-top: 10px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
     
 }
 
 .footer .socials{
     position: var(--pos1);
     width: 50%;
-    height: 10vh;
-
+    height: 15vh;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -320,7 +400,7 @@
     cursor: pointer;
     width: 60px;
     height: 60px;
-    border: 1px solid;
+    border: 1px solid rgba(255, 255, 255, 0.199);
     border-radius: 50px;
 
     display: flex;
@@ -369,42 +449,6 @@ footer > i{
 /*sm-mobile device*/
 @media  screen and (max-width: 400px) {
 
-    .content h1{
-        font-size: var(--font10);
-        font-family: 'Lobster', cursive;
-    
-        margin: 0 10px;
-        padding-top: var(--pad1);
-    }
-
-    .content h6{
-        font-size: 1.3em;
-        font-style: italic;
-        margin: 0 10px;
-        width: 70%;
-    
-        line-height: 1.6;
-        
-    }
-    
-    .content input{
-        margin: 50px 0 0 20px;
-        
-        font-size: 1.6em;
-        font-weight: bold;
-    
-        width: 250px;
-        height: 60px;
-    
-        background: none;
-        border: 1px solid white;
-    
-        color: white;
-        cursor: pointer;
-    
-    }
-   
-       
 }
 
 /*bg-mobile device*/
